force-app/main/default/objects/Team_Member__c/fields/Current_No_of_Leaves__c.field-meta.xml
<CustomField>
    <fullName>Current_No_of_Leaves__c</fullName>
    <formula>IF(NOT( ISBLANK( Date_on_Leave__c ) ),TODAY()- Date_on_Leave__c ,NULL)</formula>
    <label>Current No of Leaves</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>