force-app/main/default/objects/Team_Member__c/fields/Date_on_Leave__c.field-meta.xml
<CustomField>
    <fullName>Date_on_Leave__c</fullName>
    <label>Date on Leave</label>
    <type>Date</type>
</CustomField>