force-app/main/default/objects/Team_Member__c/fields/Delegated_Case_Owner__c.field-meta.xml
<CustomField>
    <fullName>Delegated_Case_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Delegated Case Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Team_Members1</relationshipName>
    <type>Lookup</type>
</CustomField>