force-app/main/default/objects/Team_Member__c/fields/Leave_End_Date1__c.field-meta.xml
<CustomField>
    <fullName>Leave_End_Date1__c</fullName>
    <label>Leave End Date</label>
    <type>DateTime</type>
</CustomField>