force-app/main/default/objects/Team_Member__c/fields/Leave_Start_Date1__c.field-meta.xml
<CustomField>
    <fullName>Leave_Start_Date1__c</fullName>
    <label>Leave Start Date</label>
    <type>DateTime</type>
</CustomField>