force-app/main/default/objects/Team_Member__c/fields/On_Leave__c.field-meta.xml
<CustomField>
    <fullName>On_Leave__c</fullName>
    <formula>Leave_Start_Date1__c &lt;= NOW() &amp;&amp; Leave_End_Date1__c &gt;= NOW()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>On Leave</label>
    <type>Checkbox</type>
</CustomField>