force-app/main/default/objects/Team_Member__c/fields/RM_Name__c.field-meta.xml
<CustomField>
    <fullName>RM_Name__c</fullName>
    <formula>User__r.FirstName + &apos; &apos; + User__r.LastName</formula>
    <label>RM Name</label>
    <type>Text</type>
</CustomField>