force-app/main/default/objects/Team_Member__c/fields/SV_Availability__c.field-meta.xml
<CustomField>
    <fullName>SV_Availability__c</fullName>
    <defaultValue>true</defaultValue>
    <label>SV Availability</label>
    <type>Checkbox</type>
</CustomField>